--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-reanimated": "~3.10.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
