--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "clsx": "^2.1.1",
     "expo": "~51.0.8",
+    "expo-image": "~1.12.9",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.3.0"
   },
