--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
-    "@types/react": "~18.2.79",
+    "@types/react": "18.3.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
