--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "expo-image": "~1.12.9",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.74.2",
-    "react-native-reanimated": "3.12.0",
-    "react-native-safe-area-context": "4.10.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.3.0",
-    "react-native-web": "~0.19.12",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@types/react": "18.3.3",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
