--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
