--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "clsx": "^2.1.1",
     "expo": "~51.0.11",
+    "expo-av": "~14.0.5",
     "expo-image": "~1.12.11",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.1",
