--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.11",
     "expo-image": "~1.12.11",
