--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "cc": "rm -rf ~/.bun/install/cache/* && rm -rf node_modules",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
