--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "s": "expo start",
+    "sc": "expo start -c",
+    "start": "echo 'You can use \"bun s\" or \"bun sc\" to start the app'",
     "c": "rm -rf ~/.bun/install/cache/*",
     "cc": "bun c && rm -rf node_modules",
     "format": "prettier --write .",
@@ -12,15 +14,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.12",
-    "expo-image": "~1.12.11",
+    "expo": "~51.0.14",
+    "expo-image": "~1.12.12",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
