--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "cardapp",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
     "s": "expo start",
     "sc": "expo start -c",
     "start": "echo 'You can use \"bun s\" or \"bun sc\" to start the app'",
-    "c": "rm -rf ~/.bun/install/cache/*",
-    "cc": "bun c && rm -rf node_modules",
     "cnm": "rm -rf node_modules",
     "format": "prettier --write .",
     "android": "expo start --android",
@@ -15,34 +13,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.14",
+    "expo-constants": "~16.0.2",
     "expo-image": "~1.12.12",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.16",
     "expo-status-bar": "~1.12.1",
-    "nativewind": "^4.0.1",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.12",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@react-native/eslint-config": "^0.74.84",
-    "@types/react": "~18.2.45",
-    "prettier": "^3.3.1",
-    "prettier-plugin-tailwindcss": "^0.6.2",
-    "tailwindcss": "^3.4.3",
+    "@babel/core": "^7.24.7",
+    "@types/react": "~18.2.79",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.3.3"
   },
   "private": true
