--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@expo/vector-icons": "^14.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.14",
+    "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
@@ -40,6 +40,7 @@
     "@types/react": "~18.2.79",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "tailwindcss": "^3.4.4",
     "typescript": "~5.3.3"
   },
