--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~16.0.2",
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.36",
