--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
     "expo-image": "~1.12.12",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.18",
