--- a/app.json
+++ b/app.json
@@ -16,13 +16,17 @@
       "supportsTablet": true,
       "infoPlist": {
         "CFBundleDevelopmentRegion": "ja_JP"
-      }
+      },
+      "bundleIdentifier": "com.10ui.CardApp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -36,6 +40,14 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4e5cdf15-3f51-421c-843f-ce517959a03c"
+      }
+    }
   }
 }
