--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
+    "nanoid": "^5.0.7",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
