--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@supabase/supabase-js": "^2.44.4",
+    "@types/react-native-get-random-values": "^1.8.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "expo": "~51.0.21",
+    "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-image": "~1.12.13",
     "expo-image-picker": "~15.0.7",
@@ -36,21 +37,21 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-view-shot": "3.8.0",
     "react-native-web": "~0.19.12",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
+    "@babel/core": "^7.24.9",
     "@types/react": "~18.2.79",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "typescript": "~5.3.3"
   },
   "private": true
