--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@expo/metro-runtime": "~3.2.1",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
+    "@prisma/client": "^5.17.0",
+    "@prisma/react-native": "^5.17.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@supabase/supabase-js": "^2.44.4",
     "@types/react-native-get-random-values": "^1.8.2",
@@ -36,6 +38,7 @@
     "react-native": "0.74.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.1",
+    "react-native-quick-base64": "^2.1.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
