--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-image": "~1.12.13",
+    "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.4",
