--- a/app.json
+++ b/app.json
@@ -31,6 +31,12 @@
       "bundler": "metro"
     },
     "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "アプリがカメラにアクセスすることを許可しますか？"
+        }
+      ],
       "expo-router",
       [
         "expo-image-picker",
