--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.22",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
     "expo-image": "~1.12.13",
     "expo-image-manipulator": "~12.0.5",
